# coursework1

./: .env.example  README.md  main.py  pyproject.toml  settings.py
data/: operations.xlsx
src/: decorators.py  external_api.py  main.py  reports.py  services.py  utils.py  views.py
tests/: conftest.py  test_external_api.py  test_reports.py  test_services.py  test_utils.py  test_views.py
